--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Education : Education">
+    <meta name="description" content="Kathleencorkery : Kathleen Corkery">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Education</title>
+    <title>Kathleen Corkery<p>Education</p></title>
   </head>
 
   <body>
@@ -16,52 +16,76 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/kathleencorkery/education">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/kathleencorkery/kathleencorkery">View on GitHub</a>
 
-          <h1 id="project_title">Education</h1>
-          <h2 id="project_tagline">Education</h2>
+          <h1 id="project_title">Kathleen Corkery</h1>
+          <h2 id="project_tagline">Education<p>
+Tel.: (+ 353) 86 3240333</p> <p>E-mail: kathleencorkery@hotmail.com
+</p></h2></h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/kathleencorkery/education/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/kathleencorkery/education/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+            
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <p><img src"https://cloud.githubusercontent.com/assets/17386012/13204316/e09096aa-d8c4-11e5-937d-47cc3b8360fb.png)
+" alt="Photo of Kathleen">
+<p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>View my professional profile here <a href="http://kathleencorkery.github.io/kathleencorkery">Professional Profile </a></p>
+<p>View my work experience here <a href="http://kathleencorkery.github.io/experience">Work Experience</a></p>
+ 
+ 
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<h4><p>
+M.Sc., Geographical Information Systems & Remote Sensing  </p> </h4>                                                                                                  <p>National University of Ireland (NUI), Maynooth, Co. Kildare, Ireland (Second Class Honours Grade 1)</p>
+<p>2010 - 2011</p>
+<p></p>
+<ul>	<li>Geographical Information Systems & Remote Sensing</li>
+<li>	Theoretical Remote Sensing</li>
+<li>Introduction to Geographical Information Systems	</li>
+<li>	Digital Image Processing & Advanced Remote Sensing</li> 
+<li>	Aspects of Geographical Information Science</li>
+<li>Integration of GPS, remotely sensed data & GIS: Parking Infrastructure Maynooth. </li>
+<li> 	Environmental Geophysical Techniques: Magnetic Susceptibility Spatial Mapping Project.</li>
+<li> Environmental Modelling in the Wicklow Mountains using GIS.</li>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+</ul>
+</p>
+<p></p>
+                                                
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h4><p>BA, European Development Studies (Joint Honours Geography & French) </p> </h4>        
+  <p>2003 - 2007</p>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>University College Cork, Co. Cork, Ireland.</p> 
+<p></p>
+<ul>
+<li>European Union Policies & Strategies of Development </li>
+<li> Global Food Policy</li>
+<li>Great Cities & their Planning  </li>
+<li>The Spaces & Subjects of Modernity </li>
+<li> Advanced Use of French</li>
+<li> Contemporary French Society and Politics</li>
+<li> 
+	Structures & Varieties of Contemporary French</li>
+<li> Literary Seminar II, Algeria: Fictions & Histories
+<li>Erasmus Programme 2005 - 2006 <p>Rennes 2 Université Haute Bretagne, France.</p>
+</li>
+<ul><li>Successful completion of C.I.R.E.F.E language course. </li></ul>
+</ul>
+	
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
+ </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Education maintained by <a href="https://github.com/kathleencorkery">kathleencorkery</a></p>
+        <p class="copyright">Kathleencorkery maintained by <a href="https://github.com/kathleencorkery">kathleencorkery</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
