--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ M.Sc., Geographical Information Systems & Remote Sensing  </p> </h4>            
 <li> 
 	Structures & Varieties of Contemporary French</li>
 <li> Literary Seminar II, Algeria: Fictions & Histories
-<li>Erasmus Programme 2005 - 2006 <p>Rennes 2 Université Haute Bretagne, France.</p>
+<li>Erasmus Programme 2005 - 2006; Rennes 2 Université Haute Bretagne, France.
 </li>
 <ul><li>Successful completion of C.I.R.E.F.E language course. </li></ul>
 </ul>
