--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Tel.: (+ 353) 86 3240333</p> <p>E-mail: kathleencorkery@hotmail.com
 
 <h4><p>
 M.Sc., Geographical Information Systems & Remote Sensing  </p> </h4> 
-<p>National University of Ireland (NUI), Maynooth, Co. Kildare, Ireland, Second Class Honours Grade 1</p>
+<p>National University of Ireland (NUI), Maynooth, Co. Kildare, Ireland</p>
 <p>2010 - 2011</p>
 <p></p>
 <ul>	<li>Geographical Information Systems & Remote Sensing</li>
